[project]
name = "sub-llama"
version = "0.1.0"
description = "A CLI tool to extract and translate MKV subtitles locally using Ollama"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argostranslate>=1.11.0",
    "ctranslate2>=4.7.2",
    "deep-translator>=1.11.4",
    "huggingface-hub>=1.16.1",
    "srt>=3.5.3",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
[project.scripts]
sub-llama = "main:main"
[tool.setuptools]
py-modules = ["main", "extract"]